--- a/first.html
+++ b/first.html
@@ -13,18 +13,6 @@
 		
 		<div id="root">
 			<center>
-				<div v-for="book in books">
-					<h1> {{ book.name }} </h1> 
-					<p> By <b>{{ book.author }}</b> </p>
-					<p><b>{{ book.date }}</b> in <b>{{ book.language }}</b> </br></p>
-					<form class="form-inline">
-					<input type="text" class="form-control" v-model="book.name">
-					<input type="text" class="form-control" v-model="book.author">
-					<input type="text" class="form-control" v-model="book.date">
-					<input type="text" class="form-control" v-model="book.language">
-					</form><hr class="style14">
-				</div>
-				
 				<div>
 					<h1>Add New Book</h1>
 					<form class="form-inline">
@@ -35,6 +23,36 @@
 					</br></br>
 					<button @click="addNew" type="button" class="btn btn-default">Add Book</button>
 					</form>
+				</div>
+				<hr class="style14">
+				<div v-for="book in books">
+					<div class="container">
+					<div class="row">
+					<div class="col-md-2">
+					<h1> {{ book.name }} </h1> 
+					<p> By <b>{{ book.author }}</b> </p>
+					<p><b>{{ book.date }}</b> in <b>{{ book.language }}</b> </br></p>
+					</div>
+					</br></br></br>
+					<div class="col-md-10">
+					<form class="form-inline">
+					<div class="form-group">
+					<input type="text" class="form-control" v-model="book.name">
+					</div>
+					<div class="form-group">
+					<input type="text" class="form-control" v-model="book.author">
+					</div>
+					<div class="form-group">
+					<input type="text" class="form-control" v-model="book.date">
+					</div>
+					<div class="form-group">
+					<input type="text" class="form-control" v-model="book.language">
+					</div>
+					</form>
+					</div>
+					</div>
+					</div>
+					<hr class="style14">
 				</div>
 			</center>
 		</div>
