--- a/first.html
+++ b/first.html
@@ -53,7 +53,8 @@
 					</div>
 					</div>
 					<hr class="style14">
-				</div>
+				</div></br></br>
+				<p>Developed by Avi Thour - For Learning Purpose.</p>
 			</center>
 		</div>
 	
