--- a/example1.html
+++ b/example1.html
@@ -21,7 +21,7 @@
 					<input type="text" class="form-control" v-model="newDate" placeholder="Year"></input>
 					<input type="text" class="form-control" v-model="newLanguage" placeholder="Language"></input>
 					</br></br>
-					<a href="#credit"><button @click="addNew" type="button" class="btn btn-default">Add Book</button></a>
+					<a href="#submit"><button @click="addNew" type="button" class="btn btn-default">Add Book</button></a>
 					</form>
 				</div>
 				<hr class="style14">
@@ -54,7 +54,7 @@
 					</div>
 					<hr class="style14">
 				</div></br></br>
-				<p id="credit">Developed by Avi Thour - For Learning Purpose.</p>
+				<p id="submit">Developed by Avi Thour - For Learning Purpose.</p>
 			</center>
 		</div>
 	
