--- a/example1.html
+++ b/example1.html
@@ -12,18 +12,24 @@
 	<body>
 		
 		<div id="root">
-			<center>
-				<div>
-					<h1>Add New Book</h1>
+			<center></br>
+					<div class="container">
+					<div class="row">
+					<div class="col-md-2">
+					<h1 style="color: lightgreen;">Add New Book</h1>
+					</div>
+					</br></br></br>
+					<div class="col-md-10">
 					<form class="form-inline">
 					<input type="text" class="form-control" v-model="newName" placeholder="Title"></input>
 					<input type="text" class="form-control" v-model="newAuthor" placeholder="Author"></input>
 					<input type="text" class="form-control" v-model="newDate" placeholder="Year"></input>
 					<input type="text" class="form-control" v-model="newLanguage" placeholder="Language"></input>
-					</br></br>
-					<a href="#submit"><button @click="addNew" type="button" class="btn btn-default">Add Book</button></a>
+					<a href="#submit"><button @click="addNew" type="button" class="btn btn-success"><span class="glyphicon glyphicon-ok"></span></button></a>
 					</form>
-				</div>
+					</div>
+					</div>
+					</div>
 				<hr class="style14">
 				<div v-for="book in books">
 					<div class="container">
@@ -48,6 +54,7 @@
 					<div class="form-group">
 					<input type="text" class="form-control" v-model="book.language">
 					</div>
+					<!--<button @click="remove" type="button" class="btn btn-danger">X</button>-->
 					</form>
 					</div>
 					</div>
@@ -95,6 +102,10 @@
 				this.newAuthor = '';
 				this.newDate = '';
 				this.newLanguage = '';
+			},
+			
+			remove: function (index) {
+				this.books.splice(index, 1);
 			}
 		}
       })
