Updated with Form CSS

--- a/example1.html
+++ b/example1.html
@@ -21,10 +21,18 @@
 					</br></br></br>
 					<div class="col-md-10">
 					<form class="form-inline">
+					<div class="form-group">
 					<input type="text" class="form-control" v-model="newName" placeholder="Title"></input>
+					</div>
+					<div class="form-group">
 					<input type="text" class="form-control" v-model="newAuthor" placeholder="Author"></input>
+					</div>
+					<div class="form-group">
 					<input type="text" class="form-control" v-model="newDate" placeholder="Year"></input>
+					</div>
+					<div class="form-group">
 					<input type="text" class="form-control" v-model="newLanguage" placeholder="Language"></input>
+					</div>
 					<a href="#submit"><button @click="addNew" type="button" class="btn btn-success"><span class="glyphicon glyphicon-ok"></span></button></a>
 					</form>
 					</div>
